--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
-APP_NAME=Scaffolding
+APP_NAME=Home
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://127.0.0.1:8000
 
-DB_DATABASE=scaffolding
-DB_USERNAME=scaffolding
+DB_DATABASE=home
+DB_USERNAME=home
 DB_PASSWORD=
 
 BROADCAST_DRIVER=null
@@ -14,7 +14,7 @@ QUEUE_DRIVER=redis
 
 MAIL_DRIVER=log
 MAIL_FROM_ADDRESS=hello@example.com
-MAIL_FROM_NAME=Scaffolding
+MAIL_FROM_NAME=Home
 MAILGUN_DOMAIN=
 MAILGUN_SECRET=
 
